# Thor

./: CMakeLists.txt
include/Thor/Animations/: Animator.hpp
include/Thor/Animations/Detail/: Animator.inl
